--- a/api-reference/webhook/event-structure.mdx
+++ b/api-reference/webhook/event-structure.mdx
@@ -8,7 +8,7 @@ The webhook event structure is a JSON object that contains the event type and th
 
 ```json
 {
-  "event": "booking.confirmation",
+  "event": "booking.confirmed",
   "data": {
     "id": "2695d6fb-6b7a-41b1-9902-487a5cc6c201",
     "total_quantity": 1,
